# blackcatrobotics.com

./: .gitignore  BCR_Marketing_Templates.docx  CNAME  CODE_STYLE.md  about.html  blackcat-grid.html  blackcat-os.html  certifications.html  habitat.html  hermes_conversation_20260516_140039.json  index.html  vercel.json
blackcat-os/: README.md  blackcat.toml.example  pyproject.toml
blackcat-os/.github/workflows/: ci.yml
blackcat-os/blackcat/: __init__.py  cli.py  config.py  pipeline.py
blackcat-os/blackcat/fingerprint/: __init__.py  can_analyzer.py  llm_protocol.py  models.py  network_analyzer.py  ros_analyzer.py
blackcat-os/blackcat/fmea/: __init__.py  degradation.py  llm_fmea.py  models.py  synthesizer.py
blackcat-os/blackcat/hardware/: __init__.py  actuator_detector.py  atlas_client.py  compute_detector.py  graph_builder.py  models.py  sensor_detector.py
blackcat-os/blackcat/ingestion/: __init__.py  can_capture.py  interfaces.py  models.py  network_capture.py  ros_capture.py  serial_capture.py
blackcat-os/blackcat/output/: __init__.py  llm_schema.py  models.py  platform_writer.py  rules_writer.py  schedule_writer.py
blackcat-os/blackcat/utils/: __init__.py  entropy.py  logging.py  subprocess.py
blackcat-os/docs/: platform-definition-schema.md
blackcat-os/tests/: conftest.py  test_can_analyzer.py  test_config.py  test_entropy.py  test_fmea_models.py  test_hardware_models.py  test_output_models.py  test_platforms_json.py  test_protocol_map_fixture.py  test_subprocess_utils.py
blackcat-os/tests/fixtures/: sample_protocol_map.json
(+503 files in other folders)
