[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackcat-os"
version = "0.1.0"
description = "Open source robotics platform intelligence layer by BlackCat Robotics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "BlackCat Robotics", email = "blackcatrobotics.ai@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "networkx>=3.3",
    "pydantic>=2.7.0",
    "python-can>=4.4.0",
    "pyserial>=3.5",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "toml>=0.10.2",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
blackcat = "blackcat.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["blackcat"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
